-Adicionando bibliotecas para auxiliar na criação das views (bootstrap, jquery, validação) e a logo do site. -Criando a página de login e disponibilizando sua chamada no controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.mvc.view.prefix:/WEB-INF/jsp/
+#Configuração JSP
+spring.mvc.view.prefix:/WEB-INF/view/
 spring.mvc.view.suffix:.jsp
 
+#Configuração Base de Dados
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/evisas?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
