- Criado serviço de envio do email (funcionando)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/evisas?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
+
+#Configuração Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=contatoevisas@gmail.com
+spring.mail.password=evisas123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
