--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
 			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
 		
+		<!-- Dependência para conseguir usar AOP (@Aspect) -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
