--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.mail.username=contatoevisas@gmail.com
 spring.mail.password=evisas123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Outras Configurações 
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+path.documento.solicitacao.visto=doctsSolicitacaoVisto/usuario_%s/docto_solicitacao_%s.%s
