--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 path.documento.solicitacao.visto=doctsSolicitacaoVisto/usuario_%s/docto_solicitacao_%s.%s
+path.busca.documento.solicitacao.visto=doctsSolicitacaoVisto/usuario_%s/docto_solicitacao_%s
+nome.documento.solicitacao.visto=anexo_solicitacao_visto
