- Criada funcionalidade do usuário Cancelar e de Editar uma solicitação de visto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #Outras Configurações 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+path.fileserver=fileserver/
 path.documento.solicitacao.visto=doctsSolicitacaoVisto/usuario_%s/docto_solicitacao_%s.%s
 path.busca.documento.solicitacao.visto=doctsSolicitacaoVisto/usuario_%s/docto_solicitacao_%s
 nome.documento.solicitacao.visto=anexo_solicitacao_visto
