--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/evisas?useTimezone=true&server
 spring.datasource.username=root
 spring.datasource.password=123456
 
+#Configuração Encoding
+#spring.messages.encoding=UTF-8
+#server.tomcat.uri-encoding=UTF-8
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+
 #Configuração Email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
